@@ -1,5 +1,9 @@
 CHANGES:
 
+04/03/2015:
+- add a minimal filter to convert Quattro Pro's Wq1-Wq2 files: ie. only retrieved text and number/float
+ (but not formula and format )
+
 26/02/2015:
 - add classes to create shape and more complex graphic styles: WPSGraphicShape, WPSGraphicStyle,
 - enhance the WPSBorder class and add a WPSColor class to store color,
